force-app/main/default/objects/Playlist__c/Playlist__c.object-meta.xml
<CustomObject>
    <label>Playlist</label>
    <nameField>
        <label>Playlist Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Playlists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>