force-app/main/default/objects/Playlist__c/fields/Collaborative__c.field-meta.xml
<CustomField>
    <fullName>Collaborative__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Collaborative</label>
    <type>Checkbox</type>
</CustomField>