force-app/main/default/objects/Playlist__c/fields/public__c.field-meta.xml
<CustomField>
    <fullName>public__c</fullName>
    <defaultValue>false</defaultValue>
    <label>public</label>
    <type>Checkbox</type>
</CustomField>