force-app/main/default/objects/Playlist__c/fields/SpotifyId__c.field-meta.xml
<CustomField>
    <fullName>SpotifyId__c</fullName>
    <externalId>true</externalId>
    <label>Spotify Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>