force-app/main/default/objects/Playlist__c/fields/TotalTracksDuration__c.field-meta.xml
<CustomField>
    <fullName>TotalTracksDuration__c</fullName>
    <label>Total Tracks Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>